--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -175,5 +175,25 @@
 
 body {
 	@apply bg-dark-eerie-black-color;
-	font-family: 'Roboto' !important;
+	font-family: 'Roboto Flex' !important;
+}
+
+html {
+    scrollbar-width: thin !important;
+    scrollbar-color: #6B7280 #2b2f33 !important;
+}
+
+html::-webkit-scrollbar {
+    width: 8px !important;
+}
+
+html::-webkit-scrollbar-track {
+    background-color: #2b2f33 !important;
+    border-radius: 8px !important;
+}
+
+html::-webkit-scrollbar-thumb {
+    background-color: #6B7280 !important;
+    border-radius: 8px !important;
+    border: 2px solid #2b2f33 !important;
 }
