--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -24,6 +24,13 @@
 		rgba(0, 0, 0, 0) -20.31%,
 		rgba(0, 0, 0, 0.72) 61.49%
 	);
+	--line-bg-liner-left: linear-gradient(270deg, #bac3cf 0%, #5a6068 100%);
+	--line-bg-liner-right: linear-gradient(90deg, #bac3cf 0%, #5a6068 100%);
+	--line-bg-top-liner: linear-gradient(
+		90deg,
+		rgba(4, 234, 111, 0.64) -1.85%,
+		#3d444d 4.58%
+	);
 }
 
 @layer utilities {
@@ -155,19 +162,19 @@
 	}
 	.text-8-reg {
 		font-size: 8px;
-		font-weight: 400;
+		font-weight: 200;
 		line-height: 1.2;
 		letter-spacing: -4%;
 	}
 	.text-8-med {
 		font-size: 8px;
-		font-weight: 500;
+		font-weight: 400;
 		line-height: 1.2;
 		letter-spacing: -4%;
 	}
-	.text-4-reg {
+	.text-7-reg {
 		font-size: 7px;
-		font-weight: 400;
+		font-weight: 200;
 		line-height: 1.2;
 		letter-spacing: -2%;
 	}
@@ -179,21 +186,21 @@ body {
 }
 
 html {
-    scrollbar-width: thin !important;
-    scrollbar-color: #6B7280 #2b2f33 !important;
+	scrollbar-width: thin !important;
+	scrollbar-color: #6b7280 #2b2f33 !important;
 }
 
 html::-webkit-scrollbar {
-    width: 8px !important;
+	width: 8px !important;
 }
 
 html::-webkit-scrollbar-track {
-    background-color: #2b2f33 !important;
-    border-radius: 8px !important;
+	background-color: #2b2f33 !important;
+	border-radius: 8px !important;
 }
 
 html::-webkit-scrollbar-thumb {
-    background-color: #6B7280 !important;
-    border-radius: 8px !important;
-    border: 2px solid #2b2f33 !important;
+	background-color: #6b7280 !important;
+	border-radius: 8px !important;
+	border: 2px solid #2b2f33 !important;
 }
