--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -13,7 +13,9 @@
 	--dark-onix-color: #3b4045;
 	--dark-eerie-black-color: #1c1e21;
 	--green-25-color: #59ff9640;
+	--green-20-color: #1abc9c33;
 	--red-25-color: #ff212140;
+	--red-20-color: #f0443833;
 	--gray-25-color: #ffffff40;
 	--gray-90-color: #ffffffe6;
 	--gray-75-color: #ffffffbf;
@@ -35,10 +37,15 @@
 
 @layer utilities {
 	.container-custom {
-		max-width: 1320px;
+		max-width: 1260px;
 		width: 100%;
 		padding: 0 20px;
 		margin: 0 auto;
+	}
+	.text-32-ext {
+		font-size: 32px;
+		font-weight: 200;
+		line-height: 1.2;
 	}
 	.text-32-reg {
 		font-size: 32px;
@@ -59,6 +66,11 @@
 		font-size: 32px;
 		font-weight: 700;
 		line-height: 1.2;
+	}
+	.text-24-ext {
+		font-size: 24px;
+		font-weight: 200;
+		line-height: 1.15;
 	}
 	.text-24-reg {
 		font-size: 24px;
@@ -85,6 +97,11 @@
 		font-weight: 400;
 		line-height: 1.1;
 	}
+	.text-16-ext {
+		font-size: 16px;
+		font-weight: 200;
+		line-height: 1.1;
+	}
 	.text-16-med {
 		font-size: 16px;
 		font-weight: 500;
@@ -99,6 +116,11 @@
 		font-size: 16px;
 		font-weight: 700;
 		line-height: 1.1;
+	}
+	.text-14-ext {
+		font-size: 14px;
+		font-weight: 200;
+		line-height: 1.6;
 	}
 	.text-14-reg {
 		font-size: 14px;
@@ -120,6 +142,11 @@
 		font-weight: 700;
 		line-height: 1.6;
 	}
+	.text-12-ext {
+		font-size: 12px;
+		font-weight: 200;
+		line-height: 1.2;
+	}
 	.text-12-reg {
 		font-size: 12px;
 		font-weight: 400;
@@ -138,6 +165,11 @@
 	.text-12-bold {
 		font-size: 12px;
 		font-weight: 700;
+		line-height: 1.2;
+	}
+	.text-10-ext {
+		font-size: 10px;
+		font-weight: 200;
 		line-height: 1.2;
 	}
 	.text-10-reg {
@@ -160,9 +192,15 @@
 		font-weight: 700;
 		line-height: 1.2;
 	}
-	.text-8-reg {
+	.text-8-ext {
 		font-size: 8px;
 		font-weight: 200;
+		line-height: 1.2;
+		letter-spacing: -4%;
+	}
+	.text-8-reg {
+		font-size: 8px;
+		font-weight: 400;
 		line-height: 1.2;
 		letter-spacing: -4%;
 	}
