--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -69,8 +69,16 @@
 		rgba(0, 0, 0, 0) -20.31%,
 		rgba(0, 0, 0, 0.72) 61.49%
 	);
-	--line-bg-liner-left: linear-gradient(270deg, #bac3cf 0%, #5a6068 100%);
-	--line-bg-liner-right: linear-gradient(90deg, #bac3cf 0%, #5a6068 100%);
+	--line-bg-liner-left: linear-gradient(
+		270deg,
+		#bac3cf 0%,
+		#5a6068 100%
+	);
+	--line-bg-liner-right: linear-gradient(
+		90deg,
+		#bac3cf 0%,
+		#5a6068 100%
+	);
 	--line-bg-top-liner: linear-gradient(
 		90deg,
 		rgba(4, 234, 111, 0.64) -1.85%,
@@ -263,17 +271,17 @@
 
 body {
 	@apply bg-dark-eerie-black-color;
-	font-family: 'Roboto Flex' !important;
+	font-family: "Roboto Flex" !important;
 }
 
 .alert-enter-active,
 .alert-leave-active {
-    transition: opacity 150ms linear;
+	transition: opacity 150ms linear;
 }
 
 .alert-enter-from,
 .alert-leave-to {
-    opacity: 0;
+	opacity: 0;
 }
 
 html {
@@ -294,4 +302,173 @@ html::-webkit-scrollbar-thumb {
 	background-color: #6b7280 !important;
 	border-radius: 8px !important;
 	border: 2px solid #2b2f33 !important;
+}
+
+/* DatePicker */
+
+.dp__theme_dark {
+	--dp-background-color: #2b2f33 !important;
+	--dp-text-color: #fff;
+	--dp-hover-color: #484848;
+	--dp-hover-text-color: #fff;
+	--dp-hover-icon-color: #959595;
+	--dp-primary-color: #f0b61c !important;
+	--dp-primary-disabled-color: #61a8ea;
+	--dp-primary-text-color: #fff;
+	--dp-secondary-color: #a9a9a9;
+	--dp-border-color: #2d2d2d;
+	--dp-menu-border-color: #2d2d2d;
+	--dp-border-color-hover: #aaaeb7;
+	--dp-border-color-focus: #aaaeb7;
+	--dp-disabled-color: #737373;
+	--dp-disabled-color-text: #d0d0d0;
+	--dp-scroll-bar-background: #212121;
+	--dp-scroll-bar-color: #484848;
+	--dp-success-color: #00701a;
+	--dp-success-color-disabled: #428f59;
+	--dp-icon-color: #959595;
+	--dp-danger-color: #e53935;
+	--dp-marker-color: #e53935;
+	--dp-tooltip-color: #3e3e3e;
+	--dp-highlight-color: rgb(0 92 178 / 20%);
+	--dp-range-between-dates-background-color: var(
+		--dp-hover-color,
+		#484848
+	);
+	--dp-range-between-dates-text-color: var(
+		--dp-hover-text-color,
+		#fff
+	);
+	--dp-range-between-border-color: var(--dp-hover-color, #fff);
+}
+
+:root {
+	/*General*/
+	--dp-font-family: "Roboto Flex", "Helvetica Neue", sans-serif;
+	--dp-border-radius: 8px !important; /*Configurable border-radius*/
+	--dp-cell-border-radius: 50% !important; /*Specific border radius for the calendar cell*/
+	--dp-common-transition: all 0.1s ease-in; /*Generic transition applied on buttons and calendar cells*/
+
+	/*Sizing*/
+	--dp-button-height: 35px; /*Size for buttons in overlays*/
+	--dp-month-year-row-height: 35px; /*Height of the month-year select row*/
+	--dp-month-year-row-button-size: 35px; /*Specific height for the next/previous buttons*/
+	--dp-button-icon-height: 20px; /*Icon sizing in buttons*/
+	--dp-cell-size: 35px; /*Width and height of calendar cell*/
+	--dp-cell-padding: 5px; /*Padding in the cell*/
+	--dp-common-padding: 10px; /*Common padding used*/
+	--dp-input-icon-padding: 35px; /*Padding on the left side of the input if icon is present*/
+	--dp-input-padding: 6px 30px 6px 12px; /*Padding in the input*/
+	--dp-menu-min-width: 260px; /*Adjust the min width of the menu*/
+	--dp-action-buttons-padding: 2px 5px; /*Adjust padding for the action buttons in action row*/
+	--dp-row-margin: 5px 0; /*Adjust the spacing between rows in the calendar*/
+	--dp-calendar-header-cell-padding: 0.5rem; /*Adjust padding in calendar header cells*/
+	--dp-two-calendars-spacing: 10px; /*Space between multiple calendars*/
+	--dp-overlay-col-padding: 3px; /*Padding in the overlay column*/
+	--dp-time-inc-dec-button-size: 32px; /*Sizing for arrow buttons in the time picker*/
+	--dp-menu-padding: 6px 8px; /*Menu padding*/
+
+	/*Font sizes*/
+	--dp-font-size: 1rem; /*Default font-size*/
+	--dp-preview-font-size: 0.8rem; /*Font size of the date preview in the action row*/
+	--dp-time-font-size: 0.8rem; /*Font size in the time picker*/
+
+	/*Transitions*/
+	--dp-animation-duration: 0.1s; /*Transition duration*/
+	--dp-menu-appear-transition-timing: cubic-bezier(
+		0.4,
+		0,
+		1,
+		1
+	); /*Timing on menu appear animation*/
+	--dp-transition-timing: ease-out; /*Timing on slide animations*/
+}
+
+.dp__input_readonly,
+.dp__input,
+.dp__input_icon,
+.dp--clear-btn,
+.dp--tp-wrap,
+.dp__selection_preview {
+	display: none !important;
+}
+
+.dp__outer_menu_wrap.dp--menu-wrapper {
+	border: 1px solid var(--gray-15-color);
+	border-radius: 8px;
+}
+
+/* .dp__date_hover_start:hover,
+.dp__range_start,
+.dp__date_hover_end:hover,
+.dp__range_end {
+	border-end-end-radius: unset !important;
+	border-end-start-radius: unset !important;
+	border-start-start-radius: unset !important;
+	border-start-end-radius: unset !important;
+	border-radius: 50% !important;
+} */
+
+.dp__cell_auto_range_end,
+.dp__date_hover_end:hover,
+.dp__range_end {
+	border-end-start-radius: unset !important;
+	border-end-end-radius: 10px !important;
+	border-start-start-radius: unset !important;
+	border-start-end-radius: 10px !important;
+}
+
+.dp__cell_auto_range_start,
+.dp__date_hover_start:hover,
+.dp__range_start {
+	border-end-start-radius: 10px !important;
+	border-end-end-radius: unset !important;
+	border-start-start-radius: 10px !important;
+	border-start-end-radius: unset !important;
+}
+
+.dp__today {
+	border-radius: 10px !important;
+}
+
+.dp__range_between {
+	background: var(
+		--dp-range-between-dates-background-color
+	) !important;
+}
+
+.dp__action_buttons {
+	flex-direction: row-reverse !important;
+	gap: 12px;
+}
+
+.dp__action_cancel {
+	padding: 0 16px;
+	height: 34px !important;
+	border: 1px solid var(--gray-90-color) !important;
+	background: var(--gray-15-color) !important;
+	font-size: 16px !important;
+	font-weight: 400 !important;
+	line-height: 1.1 !important;
+	transition: 0.2s linear !important;
+}
+
+.dp__action_cancel:hover {
+	background: var(--gray-40-color) !important;
+}
+
+.dp__action_select {
+	padding: 0 16px;
+	height: 34px !important;
+	border: 1px solid var(--primary-color) !important;
+	background: var(--primary-color) !important;
+	font-size: 16px !important;
+	font-weight: 400 !important;
+	line-height: 1.1 !important;
+	transition: 0.2s linear !important;
+	color: var(--dark-night-color) !important;
+}
+
+.dp__action_select:hover {
+	background: var(--warning-400) !important;
 }
